<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/parkButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:layout_marginTop="20dip"
        android:text="@string/parkButtonLabel" />

    <Button
        android:id="@+id/spotButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:text="@string/spot_string" />

    <Button
        android:id="@+id/spotMapButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:text="@string/spot_map_string" />

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/unparkButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/unpark_button_string"
            android:layout_marginLeft="30dip"
            android:layout_marginBottom="40dip"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/statisticsButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/statistics" 
            android:layout_marginRight="30dip"
            android:layout_marginBottom="40dip"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/logo" />

</LinearLayout>