<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <com.google.android.maps.MapView
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/mapview"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:clickable="true"
		    android:apiKey="05rzdwyRxLmt7Qc68Tvw_j_d2cKjcpcsCNasfUA"
		/>

        <Button
            android:id="@+id/mapVoteYesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/mapVoteYes" />


        <Button
            android:id="@+id/mapVoteNoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/mapVoteYesButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/mapVoteNo" />

        <TextView
            android:id="@+id/tipText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/validTip"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
